# media-interface

./: .env  .gitignore  README.adoc
client/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
client/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
server/: Cargo.toml
server/assets/: README.adoc  config.toml  log.txt
server/src/: main.rs
