[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full", "tracing"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio-util = "0.7.8"
futures = "0.3.28"
windows = { version = "0.48.0", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }
base64 = "0.21.0"
tokio-tungstenite = "0.19.0"
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing-appender = "0.2.2"
tray-icon = "0.5.2"
winit = "0.28.6"
image = "0.24.6"
toml = "0.7.4"
