[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full", "tracing"] }
tokio-util = "0.7.8"
futures = "0.3.28"
color-eyre = {version = "0.6.2", features = ["capture-spantrace"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.51.1", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }
tokio-tungstenite = "0.20.0"
axum = {version = "0.6.18" }
tower-http = { version = "0.4.0", features = ["fs"] }
image = "0.24.6"
base64 = "0.21.0"
toml = "0.7.4"
