[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full", "tracing"] }
futures = "0.3.28"
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.51.1", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }
tokio-tungstenite = "0.20.0"
base64 = "0.21.0"
toml = "0.7.4"
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["fs"] }
